jonny 更新于 2020年 8月14日 星期五 09时21分15秒 CST.

--- a/src/global.css
+++ b/src/global.css
@@ -5,3 +5,10 @@ html, body, #root {
 body {
   margin: 0;
 }
+.index-header {
+  background-color: red;
+}
+.index-button {
+  float: right;
+  margin: 14px;
+}
